# shuttlecraft

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.yaml  platform.yml  secret-paths.yml  session-broker-design.md
backend/: .gitignore  Cargo.toml  Dockerfile  clippy.toml  entrypoint.sh
backend/broker_migrations/: 0001_init.sql
backend/docs/: toolset.md
backend/hooks/: session-start.sh
backend/migrations/: 0007_operation_categories.sql  0008_tool_category_rules.sql  0009_app_timeline_projection.sql  0010_file_traceability.sql  0011_structured_tool_results.sql
backend/src/: auth.rs  canonical.rs  codex.rs  config.rs  correlate.rs  emulator.rs  git.rs  ingester.rs  lib.rs  library.rs  main.rs  pty.rs  routes.rs  search.rs  secret_broker.rs  stats.rs  timeline.rs  workspace.rs  ws.rs
backend/src/api/: mod.rs  routes.rs  search.rs  session_routes.rs  stats.rs  ws.rs
backend/src/ingest/: ingester.rs  mod.rs  projection.rs
backend/src/ingest/canonical/: claude.rs  codex.rs  mod.rs  tests.rs  tools.rs  types.rs
backend/src/ingest/timeline/: derived.rs  file_touches.rs  load.rs  mod.rs  project.rs  render.rs  tests.rs  types.rs
backend/tests/: correlate_integration.rs  db_integration.rs  ingester_integration.rs  pty_integration.rs  rest_integration.rs  structure_lint.rs  ws_integration.rs
backend/tests/fixtures/: README.md  codex-rich-lineage-child.jsonl  codex-rich-lineage-parent.jsonl
broker/: Dockerfile
docs/: architecture.md  backlog.md  changelog.md  deploy.md  secrets.md  state-management.md  user-guide.md
frontend/: Dockerfile  (+7 more)
(+116 files in other folders)
